--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "lets-hassel",
     "displayName": "Let's Hassel",
     "description": "A extension which adds snippets for a bunch of programming languages. Used in the programming classes @HfG",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "publisher": "craftycram",
     "icon": "./res/logo-let-s-hassel.png",
     "engines": {
@@ -16,7 +16,8 @@
         "url": "https://github.com/craftycram/lets-hassel.git"
     },
     "contributes": {
-        "snippets": [{
+        "snippets": [
+            {
                 "language": "javascript",
                 "path": "./snippets/js.json"
             },
