--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "lets-hassel",
 	"displayName": "Let's Hassel",
 	"description": "A extension which adds snippets for a bunch of programming languages. Used in the programming classes @HfG",
-	"version": "3.0.5",
+	"version": "4.0.0",
 	"publisher": "craftycram",
 	"icon": "res/logo-let-s-hassel.png",
 	"engines": {
@@ -21,7 +21,8 @@
 	],
 	"main": "./out/extension.js",
 	"contributes": {
-		"commands": [{
+		"commands": [
+			{
 				"command": "extension.setupNode",
 				"title": "[Let's Hassel] > Setup Node.js project in this folder"
 			},
@@ -46,7 +47,8 @@
 				"title": "[Let's Hassel > LoremIpsum] > Generate a specified amount of paragraphs."
 			}
 		],
-		"snippets": [{
+		"snippets": [
+			{
 				"language": "javascript",
 				"path": "./snippets/js.json"
 			},
@@ -65,7 +67,10 @@
 				"Let'sHassel.loremIpsum.format": {
 					"type": "string",
 					"default": "html",
-					"enum": ["html", "plain"],
+					"enum": [
+						"html",
+						"plain"
+					],
 					"enumDescriptions": [
 						"creates plain text",
 						"creates text in HTML style"
