--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "lets-hassel",
 	"displayName": "Let's Hassel",
 	"description": "A extension which adds snippets for a bunch of programming languages. Used in the programming classes @HfG",
-	"version": "7.0.0",
+	"version": "7.1.0",
 	"publisher": "craftycram",
 	"icon": "res/logo-let-s-hassel.png",
 	"engines": {
@@ -21,7 +21,8 @@
 	],
 	"main": "./out/extension.js",
 	"contributes": {
-		"commands": [{
+		"commands": [
+			{
 				"command": "extension.setupNode",
 				"title": "[Let's Hassel] > Setup Node.js project in this folder"
 			},
@@ -46,7 +47,8 @@
 				"title": "[Let's Hassel] > Create web files. (index.html + style.css)"
 			}
 		],
-		"snippets": [{
+		"snippets": [
+			{
 				"language": "javascript",
 				"path": "./snippets/js.json"
 			},
