--- a/templates/setupElectron/package.json
+++ b/templates/setupElectron/package.json
@@ -9,5 +9,6 @@
     "lint": "eslint src"
   },
   "author": "Marc Rufeis",
-  "license": "ISC"
+  "license": "ISC",
+  "comment": "created with the vscode Let's Hassel extension"
 }
