--- a/templates/setupNode/package.json
+++ b/templates/setupNode/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src",
+    "dev": "nodemon src",
     "lint": "eslint src"
   },
   "author": "Marc Rufeis",
-  "license": "ISC"
+  "license": "ISC",
+  "comment": "created with the vscode Let's Hassel extension"
 }
